--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <p></p>
-        <a href="./recipes/biryani.html" rel="noopener">Biryani</a>
+        <ul>
+        <li><a href="./recipes/biryani.html" rel="noopener">Biryani</a></li>
+        <li><a href="./recipes/kabab.html" rel="noopener">Kabab</a></li>
+        <li><a href="./recipes/haleem.html" rel="noopener">Haleem</a></li>
+        </ul>
     </body>
 </html>
